[package]
name = "xmas-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
softbuffer = "0.4.1"
winit = "0.29.10"
image = "0.25.5"
dyn-clone = "1.0.17"
rand = "0.8.5"
itertools = "0.13.0"
cfg_aliases = "0.2.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.47"
#web-sys = "0.3.5"
js-sys = "0.3.68"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
log = "0.4.22"
web-time = "1"
getrandom = { version =  "0.2.15", features = ["js"] }

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.5"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'HtmlCanvasElement', 'EventListener']

#[target.'cfg(target_family = "wasm")']
#rustflags = ["--cfg=web_sys_unstable_apis"]

[lib]
crate-type = ["cdylib"]
